# generator

./: .gitignore  Iterator.hs  README  generator.cabal  iterator.cabal  stack.yaml  testIterator.hs  testProducer.hs  testProducers.hs
Iterator/: Tools.hs
List/: CHANGELOG.md  List.cabal  WriterExample.hs  package.yaml
List/src/Control/Monad/: ListT.hs  StreamT.hs
List/src/Control/Monad/ListT/: Funcs.hs
List/src/Control/Monad/Trans/: List.hs
List/src/Control/Monad/Trans/List/: Funcs.hs
List/src/Data/List/: Class.hs
ListTree/: ListTree.cabal  package.yaml
ListTree/src/Data/List/: Tree.hs
ListTree/src/System/Directory/: ListTree.hs
ListTree/test/: Spec.hs
generator/: generator.cabal  package.yaml
generator/src/Control/Monad/: DList.hs  Generator.hs
src/Control/: Generator.hs
src/Control/Generator/: Consumer.hs  Folds.hs  Instances.hs  Internal.hs  List.hs  Memo.hs  Producer.hs  ProducerT.hs  Tools.hs
src/Control/Monad/: Consumer.hs  DList.hs  Generator.hs  ListT.hs  Producer.hs
src/Data/: Iterator.hs
src/Data/DList/: Generic.hs
src/Data/Iterator/: Tools.hs
src/Data/List/: Class.hs  Tree.hs
