Name:                generator
Version:             0.0
Synopsis:            Producers and Consumers. Like Python generator
License:             GPL
Author:              Yair Chuchem
Maintainer:          yairchu@gmail.com
Cabal-Version:       >= 1.2
Stability:           experiemental
Build-type:          Simple

Library
  hs-Source-Dirs:      src
  Extensions:
  Build-Depends:       base, haskell98, mtl, MaybeT
  Exposed-modules:     Control.Monad.ListT,
                       Control.Monad.Producer,
                       Control.Generator.Consumer,
                       Control.Generator.Folds,
                       Control.Generator.Instances
                       Control.Generator.List,
                       Control.Generator.Memo,
                       Control.Generator.ProducerT
                       Data.DList.Generic,
                       Data.List.Class
  Other-Modules:       Control.Generator.Internal
  ghc-options:         -Wall
