Name:                generator
Version:             0.0
Synopsis:            Producers and Consumers. Like Python generator
License:             GPL
Author:              Yair Chuchem
Maintainer:          yairchu@gmail.com
Cabal-Version:       >= 1.2
Stability:           experiemental
Build-type:          Simple

Library
  hs-Source-Dirs:      src
  Extensions:
  Build-Depends:       base, haskell98, mtl, MaybeT
  Exposed-modules:     Control.Monad.ListT,
                       Control.Monad.DList,
                       Control.Monad.Consumer,
                       Control.Monad.Generator,
                       Data.List.Class,
                       Data.List.Tree
  ghc-options:         -Wall
