Name:                List
Version:             0.3.0
Category:            Control
Synopsis:            List monad transformer and class
Description:
    A List monad transformer and a List class.
    With standard list operations for Lists
License:             BSD3
License-file:        LICENSE
Author:              Yair Chuchem
Maintainer:          yairchu@gmail.com
Homepage:            http://github.com/yairchu/generator/tree
Cabal-Version:       >= 1.2
Stability:           experiemental
Build-type:          Simple

Library
  hs-Source-Dirs:      src
  Extensions:
  Build-Depends:       base >= 3 && < 5, mtl
  Exposed-modules:     Control.Monad.ListT,
                       Data.List.Class
  Ghc-Options:         -O2 -Wall

