Name:                ListTree
Version:             0.2.0
Category:            Algorithms
Synopsis:            Combinatoric search using ListT
Description:
    Searching and pruning
    trees expressed as 'List's whose underlying monad
    is also a List.
License:             BSD3
License-file:        LICENSE
Author:              Yair Chuchem
Maintainer:          yairchu@gmail.com
Homepage:            http://github.com/yairchu/generator/tree
Cabal-Version:       >= 1.2
Stability:           experiemental
Build-type:          Simple

Library
  hs-Source-Dirs:      src
  Extensions:
  Build-Depends:       base >= 3 && < 5, directory == 1.0.*, filepath == 1.1.*, transformers == 0.2.*, List >= 0.4.0 && < 0.6.0
  Exposed-modules:     Data.List.Tree
                       System.Directory.ListTree
  Ghc-Options:         -O2 -Wall

